--- a/exemple10.html
+++ b/exemple10.html
@@ -25,35 +25,46 @@
         let SCREEN_HEIGHT = window.innerHeight;
         let ratioLargeurHauteur = SCREEN_WIDTH/SCREEN_HEIGHT;
         let choixRotationAutomatiqueCube= false;
-        const cameraper = new THREE.PerspectiveCamera(75,ratioLargeurHauteur,0.1,1000);
-        cameraper.position.z =5;
-        const tailleFrustrum= 7;
-        const cameraortho = new THREE.PerspectiveCamera(
-            -0.5 *tailleFrustrum * ratioLargeurHauteur, 0.5*tailleFrustrum * ratioLargeurHauteur,
-             0.5 * tailleFrustrum,- 0.5 * tailleFrustrum, 1, 1000 );
-        cameraortho.position.z =5;
-
-        let cameraactive=cameraper;
-        let choixcamera= true;
-
+        const camera = new THREE.PerspectiveCamera(75,ratioLargeurHauteur,0.1,1000);
+        camera.position.z =45
         const renderer = new THREE.WebGLRenderer();
         renderer.setSize(SCREEN_WIDTH,SCREEN_HEIGHT);
         document.body.appendChild(renderer.domElement);
-        const geometry= new THREE.BoxGeometry();
-        const material=new THREE.MeshPhongMaterial({color: 0x10faa1});
-        const cube= new THREE.Mesh(geometry, material);
-        scene.add(cube);
+
+        const geometryknot = new THREE.TorusKnotGeometry( 10, 3, 100, 20); 
+        // const material = new THREE.MeshLambertMaterial( { color: 0xffffaa } ); 
+        // material.emissive= new THREE.Color(0,2,0)
+
+        // const material = new THREE.MeshPhongMaterial( { color: 0x00ffaa } ); 
+        // material.shininess= 800;
+        // material.flatShading=true;
+        // material.specular.set(0xff0000)
+        
+        // const material = new THREE.MeshStandardMaterial( { color: 0x00ffaa } ); 
+        // material.metalness=0.5;
+        // material.roughness=0;
+
+    //    const material = new THREE.MeshToonMaterial( { color: 0x00ffaa } ); 
+    //    material.emissive=new THREE.Color(0,0,0)
+
+    //    const material = new THREE.MeshPhysicalMaterial( { color: 0x00ffaa } ); 
+    //    material.clearcoat=0.1;
+    //    material.clearcoatRoughness=0.3;
+
+        const torusKnot = new THREE.Mesh( geometryknot, material); 
+        scene.add(torusKnot);
+
         const dirLightIntensity=1;
-        const dirLight = new THREE.DirectionalLight({color: 0xffffff}, dirLightIntensity);
+        const dirLight = new THREE.DirectionalLight(0xffffff, dirLightIntensity);
         dirLight.position.set(-1,2,4);
         scene.add(dirLight);
         function animate(){
             requestAnimationFrame(animate);
             if(choixRotationAutomatiqueCube){
-            cube.rotation.x +=0.01;
-            cube.rotation.y +=0.01;
+                torusKnot.rotation.x +=0.01;
+                torusKnot.rotation.y +=0.01;
             }
-            renderer.render(scene, cameraactive)
+            renderer.render(scene, camera)
         }
         animate();
         function onWindowResize(){
@@ -61,15 +72,8 @@
             SCREEN_WIDTH = window.innerWidth;
             let SCREEN_HEIGHT = window.innerHeight;
             let ratioLargeurHauteur = SCREEN_WIDTH/SCREEN_HEIGHT;
-            cameraper.aspect= ratioLargeurHauteur;
-            cameraper.updateProjectionMatrix();
-
-            cameraortho.left = -0.5*tailleFrustrum*ratioLargeurHauteur;
-            cameraortho.right=0.5 * tailleFrustrum*ratioLargeurHauteur;
-            cameraortho.top=0.5*tailleFrustrum;
-            cameraortho.bottom= -0.5*tailleFrustrum;
-            cameraortho.updateProjectionMatrix();
-
+            camera.aspect= ratioLargeurHauteur;
+            camera.updateProjectionMatrix();
             renderer.setSize(SCREEN_WIDTH,SCREEN_HEIGHT);
         }
         window.addEventListener("resize",onWindowResize);
@@ -84,18 +88,7 @@
                     else
                         console.log("arret de la rotation auto")
                     break;
-                case 'c':
-                    choixcamera= ! choixcamera;
-                    if(choixcamera){
-                        console.log("projection perspective");
-                        cameraactive= cameraper;
-                    }
-                    else {
-                        console.log("projection orthographique")
-                        cameraactive=cameraortho;
-                    }
-
-                    break
+                    
             }
         }
         document.addEventListener("keydown",evenementTouche);
