--- a/exemple8.html
+++ b/exemple8.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cube qui tourne + eclairage + redimentionnement</title>
+    <title>Cube qui tourne + eclairage + redimentionnement, transfo</title>
     <style>
         body {
             margin: 0;
@@ -24,36 +24,60 @@
         let SCREEN_WIDTH = window.innerWidth;
         let SCREEN_HEIGHT = window.innerHeight;
         let ratioLargeurHauteur = SCREEN_WIDTH/SCREEN_HEIGHT;
-        let choixRotationAutomatiqueCube= false;
-        const cameraper = new THREE.PerspectiveCamera(75,ratioLargeurHauteur,0.1,1000);
-        cameraper.position.z =5;
-        const tailleFrustrum= 7;
-        const cameraortho = new THREE.PerspectiveCamera(
-            -0.5 *tailleFrustrum * ratioLargeurHauteur, 0.5*tailleFrustrum * ratioLargeurHauteur,
-             0.5 * tailleFrustrum,- 0.5 * tailleFrustrum, 1, 1000 );
-        cameraortho.position.z =5;
 
-        let cameraactive=cameraper;
-        let choixcamera= true;
+        let choixRotationAutomatiqueCube= false;
+        let choixRotationAutomatiquegroupe= false;
+
+        const camera = new THREE.PerspectiveCamera(75,ratioLargeurHauteur,0.1,1000);
+        camera.position.set (-3,3,3)
+        camera.lookAt(0,0,0)
 
         const renderer = new THREE.WebGLRenderer();
         renderer.setSize(SCREEN_WIDTH,SCREEN_HEIGHT);
+
         document.body.appendChild(renderer.domElement);
+
+        const geometrytorus = new THREE.TorusGeometry(10,3, 16, 15); 
+        const materialtorus = new THREE.MeshPhongMaterial( { color: 0xffff00 } ); 
+        const torus = new THREE.Mesh( geometrytorus, materialtorus );
+        torus.scale.set(0.1,0.1,0.1);
+        const axesHelperTorus = new THREE.AxesHelper(5);
+        axesHelperTorus.scale.set(0.1,0.1,0.1);
+        torus.add(axesHelperTorus);
+
         const geometry= new THREE.BoxGeometry();
         const material=new THREE.MeshPhongMaterial({color: 0x10faa1});
         const cube= new THREE.Mesh(geometry, material);
-        scene.add(cube);
+        const axesHelperCube= new THREE.AxesHelper(5)
+        axesHelperCube.scale.set(0.5,0.5,0.5);
+        cube.add(axesHelperCube);
+        cube.translateX(4.0);
+        
+        const groupe = new THREE.Group();
+        groupe.add(torus);
+        groupe.add(cube);
+        scene.add(groupe);
+
+        const axesHelperMonde = new THREE.AxesHelper(5);
+        scene.add(axesHelperMonde);
+
+
         const dirLightIntensity=1;
         const dirLight = new THREE.DirectionalLight({color: 0xffffff}, dirLightIntensity);
         dirLight.position.set(-1,2,4);
         scene.add(dirLight);
+
         function animate(){
             requestAnimationFrame(animate);
             if(choixRotationAutomatiqueCube){
-            cube.rotation.x +=0.01;
+            cube.rotation.x +=0.001;
             cube.rotation.y +=0.01;
             }
-            renderer.render(scene, cameraactive)
+            if (choixRotationAutomatiquegroupe){
+                groupe.rotation.y += 0.01;
+            }
+            renderer.render(scene, camera)
+
         }
         animate();
         function onWindowResize(){
@@ -61,15 +85,8 @@
             SCREEN_WIDTH = window.innerWidth;
             let SCREEN_HEIGHT = window.innerHeight;
             let ratioLargeurHauteur = SCREEN_WIDTH/SCREEN_HEIGHT;
-            cameraper.aspect= ratioLargeurHauteur;
-            cameraper.updateProjectionMatrix();
-
-            cameraortho.left = -0.5*tailleFrustrum*ratioLargeurHauteur;
-            cameraortho.right=0.5 * tailleFrustrum*ratioLargeurHauteur;
-            cameraortho.top=0.5*tailleFrustrum;
-            cameraortho.bottom= -0.5*tailleFrustrum;
-            cameraortho.updateProjectionMatrix();
-
+            camera.aspect= ratioLargeurHauteur;
+            camera.updateProjectionMatrix();
             renderer.setSize(SCREEN_WIDTH,SCREEN_HEIGHT);
         }
         window.addEventListener("resize",onWindowResize);
@@ -84,18 +101,12 @@
                     else
                         console.log("arret de la rotation auto")
                     break;
-                case 'c':
-                    choixcamera= ! choixcamera;
-                    if(choixcamera){
-                        console.log("projection perspective");
-                        cameraactive= cameraper;
-                    }
-                    else {
-                        console.log("projection orthographique")
-                        cameraactive=cameraortho;
-                    }
+                case 'g':
+                    choixRotationAutomatiquegroupe =!choixRotationAutomatiquegroupe;
+                    if (choixRotationAutomatiquegroupe == true){}
+                    else{}
 
-                    break
+                    break;
             }
         }
         document.addEventListener("keydown",evenementTouche);
