--- a/exemple10bis.html
+++ b/exemple10bis.html
@@ -26,43 +26,43 @@
         let ratioLargeurHauteur = SCREEN_WIDTH/SCREEN_HEIGHT;
         let choixRotationAutomatiqueCube= false;
         const camera = new THREE.PerspectiveCamera(75,ratioLargeurHauteur,0.1,1000);
-        camera.position.z =45
+        camera.position.z =4
+
+        const geometryPlan = new THREE.PlaneGeometry(5,5);
+        const materialPlan = new THREE.MeshBasicMaterial();
+        const loaderTexturePlan = new THREE.TextureLoader();
+        loaderTexturePlan.load(
+            '.textures/water.jpg',
+            function(texture){
+                texture.wrapS = THREE.RepeatWrapping;
+                texture.wrapT = THREE.RepeatWrapping;
+                texture.repeat.set(4,4);
+                materialPlan.map= texture;
+                //https://threejs.org/docs/#api/en/materials/Material
+                materialPlan.needsUpdate=true;
+            },
+            undefined,
+            function(err){
+                console.error('erreur de chargement', err);
+            }
+        )
+
         const renderer = new THREE.WebGLRenderer();
         renderer.setSize(SCREEN_WIDTH,SCREEN_HEIGHT);
         document.body.appendChild(renderer.domElement);
-
-        const geometryknot = new THREE.TorusKnotGeometry( 10, 3, 100, 20); 
-        // const material = new THREE.MeshLambertMaterial( { color: 0xffffaa } ); 
-        // material.emissive= new THREE.Color(0,2,0)
-
-        // const material = new THREE.MeshPhongMaterial( { color: 0x00ffaa } ); 
-        // material.shininess= 800;
-        // material.flatShading=true;
-        // material.specular.set(0xff0000)
-        
-        // const material = new THREE.MeshStandardMaterial( { color: 0x00ffaa } ); 
-        // material.metalness=0.5;
-        // material.roughness=0;
-
-    //    const material = new THREE.MeshToonMaterial( { color: 0x00ffaa } ); 
-    //    material.emissive=new THREE.Color(0,0,0)
-
-    //    const material = new THREE.MeshPhysicalMaterial( { color: 0x00ffaa } ); 
-    //    material.clearcoat=0.1;
-    //    material.clearcoatRoughness=0.3;
-
-        // const torusKnot = new THREE.Mesh( geometryknot, material); 
-        // scene.add(torusKnot);
-
+        const geometry= new THREE.BoxGeometry();
+        const material=new THREE.MeshPhongMaterial({color: 0x10faa1});
+        const cube= new THREE.Mesh(geometry, material);
+        scene.add(cube);
         const dirLightIntensity=1;
-        const dirLight = new THREE.DirectionalLight(0xffffff, dirLightIntensity);
+        const dirLight = new THREE.DirectionalLight({color: 0xffffff}, dirLightIntensity);
         dirLight.position.set(-1,2,4);
         scene.add(dirLight);
         function animate(){
             requestAnimationFrame(animate);
             if(choixRotationAutomatiqueCube){
-                torusKnot.rotation.x +=0.01;
-                torusKnot.rotation.y +=0.01;
+            cube.rotation.x +=0.01;
+            cube.rotation.y +=0.01;
             }
             renderer.render(scene, camera)
         }
